css/main-ui-prototype.css
* {
  margin: 0px;
  padding: 0px;
}

body {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  margin: auto;
  /* background: linear-gradient(-20deg, darkgreen, black 250%); */
  /**background: linear-gradient( grey, white);**/
  background: radial-gradient(circle, white, grey 60%, black);
  overflow: hidden;
}
/****util ****/
.bordered {
  border: 2px solid black;
  border-collapse: collapse;
}

.vertical-align {
  display: flex;
  flex-direction: column;
}

.back-button,
.menu-button,
.confirm-button,
nav > button
{
  width: 200px;
  height: 55px;
  font-size: 1.2em;
  text-shadow: 1px 1px black;
  color:  white;
  box-shadow: 1px 1px 2px black;
  border: 1px solid black;
  margin: 2px;
}
.menu-button, nav > button {
  background: linear-gradient(red,black);
  color: white;
}

.menu-button:hover, nav > button:hover{
   box-shadow: 1px 1px 5px black;
   background: linear-gradient(darkred,black);
   border: 2px solid white;
}

.confirm-button {
  background-color: lightgreen;
  background: linear-gradient(lightgreen, green);
}

.confirm-button:hover{
  box-shadow: 1px 1px 5px black;
  background: linear-gradient(lightgreen, darkgreen);
}

.back-button {
  background-color: red;
  background: linear-gradient(red, darkred);
}
.back-button:hover{
  box-shadow: 1px 1px 5px black;
  background: linear-gradient(rgb(252, 81, 81),rgb(134, 40, 40));
}
.clickable,
.survivor-quick-view,
.header-additional-infos button,
.back-button,
.confirm-button,
.menu-button,
nav > button{
  cursor: pointer;
}

.message-box::after {
  content: "\f003";
  font-family: FontAwesome;
  font-style: normal;
  font-weight: normal;
  padding: 3px;
}
.updatable-notify{
  
  padding: 3px;
}
.no-update{
  border: 1px solid grey;
  background-color: lightgray;
  box-shadow: inset 1px 1px 1px black;
}

.notify-update{
  border: 1px solid darkgreen;
  background: radial-gradient(green,darkgreen);
  
  position: relative;
  animation-name: notify-information-animation;
  animation-duration: 1500ms;
  animation-iteration-count: infinite;
  animation-timing-function: ease-out;
}

.notify-update::before{
  position: absolute;
  content: "NEW";
  color: white;
  text-shadow: 1px 1px 1px blue;
  font-size: 0.6em;
  bottom: -15%;
  right: -10%;
  
  animation: blinking-text-small-to-big 800ms ease-in-out infinite;
}


/**** header-section ******/
header {
  height: 10%;
  display: flex;
  flex-direction: column;
}

header nav {
  display: flex;
  justify-content: center;
  flex-grow: 1;
}
header nav button {
  max-width: 200px;
  flex-grow: 1;
  font-size: 1.4em;
}
header .resource-view {
  display: flex;
  flex-grow: 1;
  justify-content: center;
}
header .resource-view div {
  flex-grow: 1;
  max-width: 150px;
  border: 1px black solid;
  margin-left: 1px;
  margin-right: 1px;
}

header .header-additional-infos{
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  height: 100%;
}


/***** loot-item-view*******/
.loot-item-view {
  display: flex;
  flex-direction: column;
  border: 1px solid black;
  margin: 5px;
  
}
.loot-item-icon {
  width: 150px;
  height: 150px;
  background-color: blueviolet;
  border: 1px solid black;
  margin: 3px;
}

.loot-item-icon img{
  max-width: 100%;
  max-height: 100%;
}
.loot-item-name{
  text-align: center;
}

/**** content-section ******/
.container {
  display: flex;
  flex-grow: 1;
  /*! max-height: 90%; */
  height: 90%;
}
main {
  flex-grow: 1;
  flex-basis: 85%;
  max-height: 100%;
}

section {
  flex-basis: 15%;
  flex-grow: 1;
}

.end-round-bttn {
  height: 50px;
  font-size: 1.1em;
  box-shadow: 1px 1px 5px black;
  text-shadow: 1px 1px 1px white;
  color: black;
  background-color: lightgreen;
}
.end-round-bttn:hover{
  box-shadow: 1px 1px 10px green;
  font-size: 1.15em;
}
#bttn-end-round {
  margin: 5px;
}

/***** Survivor Avatar Name Tag*****/
.survivor-avatar-name-tag {
  display: inline-flex;
  flex-direction: row;
}
.survivor-avatar-name-tag img{
  max-width: 30px;
  max-height: 30px;
  margin: 5px;
  flex-grow: 1;
}
.survivor-avatar-name-tag div{
  margin: auto;
  flex-grow: 1;
}
/****** stats-overview/compare *******/
.stats-overview{
  border: 1px solid black;
  display: inline-flex;
  flex-direction: column;
}
.stats-entry {
  display: flex;
  width: 200px;
  border: 1px solid grey;
}
.stats-entry div {
  flex-grow: 1;
  border: 1px solid black;
  flex-basis: 50%;
  text-align: center;
}
.stats-entry:nth-child(odd) {
  background-color: grey;
}
.stats-compare {
  width: 300px;
}
.stats-compare-entry {
  width: auto;
}
.stats-compare-entry div {
  flex-basis: 25%px;
  flex-grow: 1;
}

.stats-compare-header {
  background-color: lightgray;
  display: flex;
}
.stats-compare-header div {
  flex-grow: 1;
  flex-basis: 25%;
  text-align: center;
  border: 1px solid black;
}
.stats-compare-even {
  background-color: yellow;
}

.stats-compare-better {
  background-color: ForestGreen;
}

.stats-compare-worse {
  background-color: DarkRed;
}
/*** Survivor selection***/
.survivors-selection-panel .stats-overview {
  display: flex;
  flex-direction: row;
}
.survivors-selection-panel .survivor-panel{
  border: 1px solid blueviolet;
  margin: 5px;
}
.survivors-selection-panel .survivor-picture{
  width: 100px;
  height: 100px;
  background-color: Magenta ;
  border: 1px dotted black;
  margin: 5px;
}
.survivors-selection-panel .personal-panel {
  display: flex;
}
.survivors-selection-panel .stats-entry {
  display: flex;
  flex-direction: column;
}
.survivors-selection-panel {
  width: 50%;
  min-width: 500px;
}
.survivors-selection-panel .survivor-panel:hover {
  outline-style: outset;
  outline-color: royalblue;
  background-color: lightgray;
}

/******** location selection *********/
.location-selection-panel {
  display: flex;
  flex-direction: row;
  height: 100%;
  width: 50%;
}
.location-selection-row {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}
/* ... */

